parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> empty
Rule 4     empty -> <empty>
Rule 5     type -> INT
Rule 6     type -> FLOAT
Rule 7     type -> BOOL_TYPE
Rule 8     type -> STRING_TYPE
Rule 9     type -> VOID
Rule 10    type -> ID
Rule 11    type -> type TIMES
Rule 12    type -> type AMP
Rule 13    statement -> TYPE ID ASSIGN type SEMI
Rule 14    statement -> CONST type ID ASSIGN expression SEMI
Rule 15    statement -> STRUCT ID LBRACE struct_fields RBRACE
Rule 16    struct_fields -> struct_fields struct_field
Rule 17    struct_fields -> empty
Rule 18    struct_field -> type ID SEMI
Rule 19    statement -> CLASS ID LBRACE class_members RBRACE
Rule 20    statement -> CLASS ID EXTENDS ID LBRACE class_members RBRACE
Rule 21    class_members -> class_members class_member
Rule 22    class_members -> empty
Rule 23    class_member -> type ID SEMI
Rule 24    class_member -> func_def_inner
Rule 25    func_def_inner -> DEF ID LPAREN param_list_opt RPAREN LBRACE statements RBRACE
Rule 26    func_def_inner -> DEF ID LPAREN param_list_opt RPAREN LBRACE statements return_stmt RBRACE
Rule 27    statement -> type TIMES ID SEMI
Rule 28    statement -> type TIMES ID ASSIGN expression SEMI
Rule 29    statement -> type AMP ID ASSIGN expression SEMI
Rule 30    statement -> TIMES ID ASSIGN expression SEMI
Rule 31    statement -> type ID SEMI
Rule 32    statement -> type ID ASSIGN expression SEMI
Rule 33    statement -> type LBRACKET RBRACKET ID ASSIGN LBRACKET arg_list_opt RBRACKET SEMI
Rule 34    statement -> ID ASSIGN expression SEMI
Rule 35    statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE
Rule 36    statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 37    statement -> IF LPAREN expression RPAREN simple_statement
Rule 38    statement -> IF LPAREN expression RPAREN simple_statement ELSE simple_statement
Rule 39    simple_statement -> CONTINUE SEMI
Rule 40    simple_statement -> BREAK SEMI
Rule 41    simple_statement -> RETURN expression SEMI
Rule 42    simple_statement -> ID ASSIGN expression SEMI
Rule 43    simple_statement -> PRINT LPAREN print_args_opt RPAREN SEMI
Rule 44    simple_statement -> call SEMI
Rule 45    statement -> SWITCH LPAREN expression RPAREN LBRACE case_list RBRACE
Rule 46    statement -> SWITCH LPAREN expression RPAREN LBRACE case_list DEFAULT COLON LBRACE statements RBRACE RBRACE
Rule 47    case_list -> case_list case_item
Rule 48    case_list -> empty
Rule 49    case_item -> CASE expression COLON LBRACE statements RBRACE
Rule 50    statement -> WHILE LPAREN expression RPAREN LBRACE statements RBRACE
Rule 51    statement -> FOR LPAREN ID IN expression RPAREN LBRACE statements RBRACE
Rule 52    statement -> CONTINUE SEMI
Rule 53    statement -> BREAK SEMI
Rule 54    statement -> RETURN expression SEMI
Rule 55    statement -> RETURN SEMI
Rule 56    statement -> TRY LBRACE statements RBRACE CATCH LPAREN ID RPAREN LBRACE statements RBRACE
Rule 57    statement -> TRY LBRACE statements RBRACE CATCH LPAREN ID RPAREN LBRACE statements RBRACE FINALLY LBRACE statements RBRACE
Rule 58    statement -> THROW expression SEMI
Rule 59    statement -> DEF ID LPAREN param_list_opt RPAREN LBRACE statements RBRACE
Rule 60    statement -> DEF ID LPAREN param_list_opt RPAREN LBRACE statements return_stmt RBRACE
Rule 61    return_stmt -> RETURN expression SEMI
Rule 62    param_list_opt -> param_list
Rule 63    param_list_opt -> <empty>
Rule 64    param_list -> param COMMA param_list
Rule 65    param_list -> param
Rule 66    param -> type ID
Rule 67    param -> REF type ID
Rule 68    param -> OUT type ID
Rule 69    param -> CONST type ID
Rule 70    param -> ID
Rule 71    statement -> call SEMI
Rule 72    call -> ID LPAREN arg_list_opt RPAREN
Rule 73    arg_list_opt -> arg_list
Rule 74    arg_list_opt -> <empty>
Rule 75    arg_list -> expression COMMA arg_list
Rule 76    arg_list -> expression
Rule 77    statement -> PRINT LPAREN print_args_opt RPAREN SEMI
Rule 78    print_args_opt -> print_args
Rule 79    print_args_opt -> <empty>
Rule 80    print_args -> expression COMMA print_args
Rule 81    print_args -> expression
Rule 82    statement -> INPUT LPAREN ID RPAREN SEMI
Rule 83    statement -> DATASET ID ASSIGN LOAD LPAREN STRING RPAREN SEMI
Rule 84    statement -> FILTER ID WHERE expression SEMI
Rule 85    expression -> expression PLUS expression
Rule 86    expression -> expression MINUS expression
Rule 87    expression -> expression TIMES expression
Rule 88    expression -> expression DIVIDE expression
Rule 89    expression -> expression EQ expression
Rule 90    expression -> expression NEQ expression
Rule 91    expression -> expression LT expression
Rule 92    expression -> expression GT expression
Rule 93    expression -> expression LE expression
Rule 94    expression -> expression GE expression
Rule 95    expression -> expression AND expression
Rule 96    expression -> expression OR expression
Rule 97    expression -> NOT expression
Rule 98    expression -> MINUS expression
Rule 99    expression -> AMP ID
Rule 100   expression -> TIMES expression
Rule 101   expression -> LPAREN expression RPAREN
Rule 102   expression -> NUMBER
Rule 103   expression -> STRING
Rule 104   expression -> TRUE
Rule 105   expression -> FALSE
Rule 106   expression -> ID
Rule 107   expression -> SELF
Rule 108   expression -> NUMBER unit
Rule 109   expression -> NUMBER unit unit
Rule 110   expression -> ID LBRACKET expression RBRACKET
Rule 111   expression -> expression DOT ID
Rule 112   expression -> expression ARROW ID
Rule 113   expression -> call
Rule 114   expression -> NEW ID LPAREN arg_list_opt RPAREN
Rule 115   expression -> ID LBRACE struct_field_inits RBRACE
Rule 116   struct_field_inits -> struct_field_inits COMMA struct_field_init
Rule 117   struct_field_inits -> struct_field_init
Rule 118   struct_field_init -> ID COLON expression
Rule 119   unit -> UNIT_KM
Rule 120   unit -> UNIT_DEG
Rule 121   unit -> UNIT_ARCSEC
Rule 122   unit -> UNIT_JY
Rule 123   unit -> UNIT_AU
Rule 124   unit -> UNIT_LY

Terminals, with rules where they appear

AMP                  : 12 29 99
AND                  : 95
ARROW                : 112
ASSIGN               : 13 14 28 29 30 32 33 34 42 83
BOOL_TYPE            : 7
BREAK                : 40 53
CASE                 : 49
CATCH                : 56 57
CLASS                : 19 20
COLON                : 46 49 118
COMMA                : 64 75 80 116
CONST                : 14 69
CONTINUE             : 39 52
DATASET              : 83
DEF                  : 25 26 59 60
DEFAULT              : 46
DIVIDE               : 88
DOT                  : 111
ELSE                 : 36 38
EQ                   : 89
EXTENDS              : 20
FALSE                : 105
FILTER               : 84
FINALLY              : 57
FLOAT                : 6
FOR                  : 51
GE                   : 94
GT                   : 92
ID                   : 10 13 14 15 18 19 20 20 23 25 26 27 28 29 30 31 32 33 34 42 51 56 57 59 60 66 67 68 69 70 72 82 83 84 99 106 110 111 112 114 115 118
IF                   : 35 36 37 38
IN                   : 51
INPUT                : 82
INT                  : 5
LBRACE               : 15 19 20 25 26 35 36 36 45 46 46 49 50 51 56 56 57 57 57 59 60 115
LBRACKET             : 33 33 110
LE                   : 93
LOAD                 : 83
LPAREN               : 25 26 35 36 37 38 43 45 46 50 51 56 57 59 60 72 77 82 83 101 114
LT                   : 91
MINUS                : 86 98
NEQ                  : 90
NEW                  : 114
NOT                  : 97
NUMBER               : 102 108 109
OR                   : 96
OUT                  : 68
PLUS                 : 85
PRINT                : 43 77
RBRACE               : 15 19 20 25 26 35 36 36 45 46 46 49 50 51 56 56 57 57 57 59 60 115
RBRACKET             : 33 33 110
REF                  : 67
RETURN               : 41 54 55 61
RPAREN               : 25 26 35 36 37 38 43 45 46 50 51 56 57 59 60 72 77 82 83 101 114
SELF                 : 107
SEMI                 : 13 14 18 23 27 28 29 30 31 32 33 34 39 40 41 42 43 44 52 53 54 55 58 61 71 77 82 83 84
STRING               : 83 103
STRING_TYPE          : 8
STRUCT               : 15
SWITCH               : 45 46
THROW                : 58
TIMES                : 11 27 28 30 87 100
TRUE                 : 104
TRY                  : 56 57
TYPE                 : 13
UNIT_ARCSEC          : 121
UNIT_AU              : 123
UNIT_DEG             : 120
UNIT_JY              : 122
UNIT_KM              : 119
UNIT_LY              : 124
VOID                 : 9
WHERE                : 84
WHILE                : 50
error                : 

Nonterminals, with rules where they appear

arg_list             : 73 75
arg_list_opt         : 33 72 114
call                 : 44 71 113
case_item            : 47
case_list            : 45 46 47
class_member         : 21
class_members        : 19 20 21
empty                : 3 17 22 48
expression           : 14 28 29 30 32 34 35 36 37 38 41 42 45 46 49 50 51 54 58 61 75 76 80 81 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 98 100 101 110 111 112 118
func_def_inner       : 24
param                : 64 65
param_list           : 62 64
param_list_opt       : 25 26 59 60
print_args           : 78 80
print_args_opt       : 43 77
program              : 0
return_stmt          : 26 60
simple_statement     : 37 38 38
statement            : 2
statements           : 1 2 25 26 35 36 36 46 49 50 51 56 56 57 57 57 59 60
struct_field         : 16
struct_field_init    : 116 117
struct_field_inits   : 115 116
struct_fields        : 15 16
type                 : 11 12 13 14 18 23 27 28 29 31 32 33 66 67 68 69
unit                 : 108 109 109

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . empty
    (4) empty -> .

    TYPE            reduce using rule 4 (empty -> .)
    CONST           reduce using rule 4 (empty -> .)
    STRUCT          reduce using rule 4 (empty -> .)
    CLASS           reduce using rule 4 (empty -> .)
    TIMES           reduce using rule 4 (empty -> .)
    ID              reduce using rule 4 (empty -> .)
    IF              reduce using rule 4 (empty -> .)
    SWITCH          reduce using rule 4 (empty -> .)
    WHILE           reduce using rule 4 (empty -> .)
    FOR             reduce using rule 4 (empty -> .)
    CONTINUE        reduce using rule 4 (empty -> .)
    BREAK           reduce using rule 4 (empty -> .)
    RETURN          reduce using rule 4 (empty -> .)
    TRY             reduce using rule 4 (empty -> .)
    THROW           reduce using rule 4 (empty -> .)
    DEF             reduce using rule 4 (empty -> .)
    PRINT           reduce using rule 4 (empty -> .)
    INPUT           reduce using rule 4 (empty -> .)
    DATASET         reduce using rule 4 (empty -> .)
    FILTER          reduce using rule 4 (empty -> .)
    INT             reduce using rule 4 (empty -> .)
    FLOAT           reduce using rule 4 (empty -> .)
    BOOL_TYPE       reduce using rule 4 (empty -> .)
    STRING_TYPE     reduce using rule 4 (empty -> .)
    VOID            reduce using rule 4 (empty -> .)
    $end            reduce using rule 4 (empty -> .)

    program                        shift and go to state 1
    statements                     shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (13) statement -> . TYPE ID ASSIGN type SEMI
    (14) statement -> . CONST type ID ASSIGN expression SEMI
    (15) statement -> . STRUCT ID LBRACE struct_fields RBRACE
    (19) statement -> . CLASS ID LBRACE class_members RBRACE
    (20) statement -> . CLASS ID EXTENDS ID LBRACE class_members RBRACE
    (27) statement -> . type TIMES ID SEMI
    (28) statement -> . type TIMES ID ASSIGN expression SEMI
    (29) statement -> . type AMP ID ASSIGN expression SEMI
    (30) statement -> . TIMES ID ASSIGN expression SEMI
    (31) statement -> . type ID SEMI
    (32) statement -> . type ID ASSIGN expression SEMI
    (33) statement -> . type LBRACKET RBRACKET ID ASSIGN LBRACKET arg_list_opt RBRACKET SEMI
    (34) statement -> . ID ASSIGN expression SEMI
    (35) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (36) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (37) statement -> . IF LPAREN expression RPAREN simple_statement
    (38) statement -> . IF LPAREN expression RPAREN simple_statement ELSE simple_statement
    (45) statement -> . SWITCH LPAREN expression RPAREN LBRACE case_list RBRACE
    (46) statement -> . SWITCH LPAREN expression RPAREN LBRACE case_list DEFAULT COLON LBRACE statements RBRACE RBRACE
    (50) statement -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (51) statement -> . FOR LPAREN ID IN expression RPAREN LBRACE statements RBRACE
    (52) statement -> . CONTINUE SEMI
    (53) statement -> . BREAK SEMI
    (54) statement -> . RETURN expression SEMI
    (55) statement -> . RETURN SEMI
    (56) statement -> . TRY LBRACE statements RBRACE CATCH LPAREN ID RPAREN LBRACE statements RBRACE
    (57) statement -> . TRY LBRACE statements RBRACE CATCH LPAREN ID RPAREN LBRACE statements RBRACE FINALLY LBRACE statements RBRACE
    (58) statement -> . THROW expression SEMI
    (59) statement -> . DEF ID LPAREN param_list_opt RPAREN LBRACE statements RBRACE
    (60) statement -> . DEF ID LPAREN param_list_opt RPAREN LBRACE statements return_stmt RBRACE
    (71) statement -> . call SEMI
    (77) statement -> . PRINT LPAREN print_args_opt RPAREN SEMI
    (82) statement -> . INPUT LPAREN ID RPAREN SEMI
    (83) statement -> . DATASET ID ASSIGN LOAD LPAREN STRING RPAREN SEMI
    (84) statement -> . FILTER ID WHERE expression SEMI
    (5) type -> . INT
    (6) type -> . FLOAT
    (7) type -> . BOOL_TYPE
    (8) type -> . STRING_TYPE
    (9) type -> . VOID
    (10) type -> . ID
    (11) type -> . type TIMES
    (12) type -> . type AMP
    (72) call -> . ID LPAREN arg_list_opt RPAREN

    $end            reduce using rule 1 (program -> statements .)
    TYPE            shift and go to state 5
    CONST           shift and go to state 8
    STRUCT          shift and go to state 9
    CLASS           shift and go to state 10
    TIMES           shift and go to state 11
    ID              shift and go to state 6
    IF              shift and go to state 12
    SWITCH          shift and go to state 13
    WHILE           shift and go to state 14
    FOR             shift and go to state 15
    CONTINUE        shift and go to state 16
    BREAK           shift and go to state 17
    RETURN          shift and go to state 18
    TRY             shift and go to state 19
    THROW           shift and go to state 20
    DEF             shift and go to state 21
    PRINT           shift and go to state 23
    INPUT           shift and go to state 24
    DATASET         shift and go to state 25
    FILTER          shift and go to state 26
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    BOOL_TYPE       shift and go to state 29
    STRING_TYPE     shift and go to state 30
    VOID            shift and go to state 31

    statement                      shift and go to state 4
    type                           shift and go to state 7
    call                           shift and go to state 22

state 3

    (3) statements -> empty .

    TYPE            reduce using rule 3 (statements -> empty .)
    CONST           reduce using rule 3 (statements -> empty .)
    STRUCT          reduce using rule 3 (statements -> empty .)
    CLASS           reduce using rule 3 (statements -> empty .)
    TIMES           reduce using rule 3 (statements -> empty .)
    ID              reduce using rule 3 (statements -> empty .)
    IF              reduce using rule 3 (statements -> empty .)
    SWITCH          reduce using rule 3 (statements -> empty .)
    WHILE           reduce using rule 3 (statements -> empty .)
    FOR             reduce using rule 3 (statements -> empty .)
    CONTINUE        reduce using rule 3 (statements -> empty .)
    BREAK           reduce using rule 3 (statements -> empty .)
    RETURN          reduce using rule 3 (statements -> empty .)
    TRY             reduce using rule 3 (statements -> empty .)
    THROW           reduce using rule 3 (statements -> empty .)
    DEF             reduce using rule 3 (statements -> empty .)
    PRINT           reduce using rule 3 (statements -> empty .)
    INPUT           reduce using rule 3 (statements -> empty .)
    DATASET         reduce using rule 3 (statements -> empty .)
    FILTER          reduce using rule 3 (statements -> empty .)
    INT             reduce using rule 3 (statements -> empty .)
    FLOAT           reduce using rule 3 (statements -> empty .)
    BOOL_TYPE       reduce using rule 3 (statements -> empty .)
    STRING_TYPE     reduce using rule 3 (statements -> empty .)
    VOID            reduce using rule 3 (statements -> empty .)
    $end            reduce using rule 3 (statements -> empty .)
    RBRACE          reduce using rule 3 (statements -> empty .)


state 4

    (2) statements -> statements statement .

    TYPE            reduce using rule 2 (statements -> statements statement .)
    CONST           reduce using rule 2 (statements -> statements statement .)
    STRUCT          reduce using rule 2 (statements -> statements statement .)
    CLASS           reduce using rule 2 (statements -> statements statement .)
    TIMES           reduce using rule 2 (statements -> statements statement .)
    ID              reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    SWITCH          reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    FOR             reduce using rule 2 (statements -> statements statement .)
    CONTINUE        reduce using rule 2 (statements -> statements statement .)
    BREAK           reduce using rule 2 (statements -> statements statement .)
    RETURN          reduce using rule 2 (statements -> statements statement .)
    TRY             reduce using rule 2 (statements -> statements statement .)
    THROW           reduce using rule 2 (statements -> statements statement .)
    DEF             reduce using rule 2 (statements -> statements statement .)
    PRINT           reduce using rule 2 (statements -> statements statement .)
    INPUT           reduce using rule 2 (statements -> statements statement .)
    DATASET         reduce using rule 2 (statements -> statements statement .)
    FILTER          reduce using rule 2 (statements -> statements statement .)
    INT             reduce using rule 2 (statements -> statements statement .)
    FLOAT           reduce using rule 2 (statements -> statements statement .)
    BOOL_TYPE       reduce using rule 2 (statements -> statements statement .)
    STRING_TYPE     reduce using rule 2 (statements -> statements statement .)
    VOID            reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    RBRACE          reduce using rule 2 (statements -> statements statement .)


state 5

    (13) statement -> TYPE . ID ASSIGN type SEMI

    ID              shift and go to state 32


state 6

    (34) statement -> ID . ASSIGN expression SEMI
    (10) type -> ID .
    (72) call -> ID . LPAREN arg_list_opt RPAREN

    ASSIGN          shift and go to state 33
    TIMES           reduce using rule 10 (type -> ID .)
    AMP             reduce using rule 10 (type -> ID .)
    ID              reduce using rule 10 (type -> ID .)
    LBRACKET        reduce using rule 10 (type -> ID .)
    LPAREN          shift and go to state 34


state 7

    (27) statement -> type . TIMES ID SEMI
    (28) statement -> type . TIMES ID ASSIGN expression SEMI
    (29) statement -> type . AMP ID ASSIGN expression SEMI
    (31) statement -> type . ID SEMI
    (32) statement -> type . ID ASSIGN expression SEMI
    (33) statement -> type . LBRACKET RBRACKET ID ASSIGN LBRACKET arg_list_opt RBRACKET SEMI
    (11) type -> type . TIMES
    (12) type -> type . AMP

    TIMES           shift and go to state 35
    AMP             shift and go to state 37
    ID              shift and go to state 36
    LBRACKET        shift and go to state 38


state 8

    (14) statement -> CONST . type ID ASSIGN expression SEMI
    (5) type -> . INT
    (6) type -> . FLOAT
    (7) type -> . BOOL_TYPE
    (8) type -> . STRING_TYPE
    (9) type -> . VOID
    (10) type -> . ID
    (11) type -> . type TIMES
    (12) type -> . type AMP

    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    BOOL_TYPE       shift and go to state 29
    STRING_TYPE     shift and go to state 30
    VOID            shift and go to state 31
    ID              shift and go to state 40

    type                           shift and go to state 39

state 9

    (15) statement -> STRUCT . ID LBRACE struct_fields RBRACE

    ID              shift and go to state 41


state 10

    (19) statement -> CLASS . ID LBRACE class_members RBRACE
    (20) statement -> CLASS . ID EXTENDS ID LBRACE class_members RBRACE

    ID              shift and go to state 42


state 11

    (30) statement -> TIMES . ID ASSIGN expression SEMI

    ID              shift and go to state 43


state 12

    (35) statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE
    (36) statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (37) statement -> IF . LPAREN expression RPAREN simple_statement
    (38) statement -> IF . LPAREN expression RPAREN simple_statement ELSE simple_statement

    LPAREN          shift and go to state 44


state 13

    (45) statement -> SWITCH . LPAREN expression RPAREN LBRACE case_list RBRACE
    (46) statement -> SWITCH . LPAREN expression RPAREN LBRACE case_list DEFAULT COLON LBRACE statements RBRACE RBRACE

    LPAREN          shift and go to state 45


state 14

    (50) statement -> WHILE . LPAREN expression RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 46


state 15

    (51) statement -> FOR . LPAREN ID IN expression RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 47


state 16

    (52) statement -> CONTINUE . SEMI

    SEMI            shift and go to state 48


state 17

    (53) statement -> BREAK . SEMI

    SEMI            shift and go to state 49


state 18

    (54) statement -> RETURN . expression SEMI
    (55) statement -> RETURN . SEMI
    (85) expression -> . expression PLUS expression
    (86) expression -> . expression MINUS expression
    (87) expression -> . expression TIMES expression
    (88) expression -> . expression DIVIDE expression
    (89) expression -> . expression EQ expression
    (90) expression -> . expression NEQ expression
    (91) expression -> . expression LT expression
    (92) expression -> . expression GT expression
    (93) expression -> . expression LE expression
    (94) expression -> . expression GE expression
    (95) expression -> . expression AND expression
    (96) expression -> . expression OR expression
    (97) expression -> . NOT expression
    (98) expression -> . MINUS expression
    (99) expression -> . AMP ID
    (100) expression -> . TIMES expression
    (101) expression -> . LPAREN expression RPAREN
    (102) expression -> . NUMBER
    (103) expression -> . STRING
    (104) expression -> . TRUE
    (105) expression -> . FALSE
    (106) expression -> . ID
    (107) expression -> . SELF
    (108) expression -> . NUMBER unit
    (109) expression -> . NUMBER unit unit
    (110) expression -> . ID LBRACKET expression RBRACKET
    (111) expression -> . expression DOT ID
    (112) expression -> . expression ARROW ID
    (113) expression -> . call
    (114) expression -> . NEW ID LPAREN arg_list_opt RPAREN
    (115) expression -> . ID LBRACE struct_field_inits RBRACE
    (72) call -> . ID LPAREN arg_list_opt RPAREN

    SEMI            shift and go to state 51
    NOT             shift and go to state 54
    MINUS           shift and go to state 52
    AMP             shift and go to state 55
    TIMES           shift and go to state 53
    LPAREN          shift and go to state 57
    NUMBER          shift and go to state 58
    STRING          shift and go to state 59
    TRUE            shift and go to state 60
    FALSE           shift and go to state 61
    ID              shift and go to state 56
    SELF            shift and go to state 62
    NEW             shift and go to state 64

    expression                     shift and go to state 50
    call                           shift and go to state 63

state 19

    (56) statement -> TRY . LBRACE statements RBRACE CATCH LPAREN ID RPAREN LBRACE statements RBRACE
    (57) statement -> TRY . LBRACE statements RBRACE CATCH LPAREN ID RPAREN LBRACE statements RBRACE FINALLY LBRACE statements RBRACE

    LBRACE          shift and go to state 65


state 20

    (58) statement -> THROW . expression SEMI
    (85) expression -> . expression PLUS expression
    (86) expression -> . expression MINUS expression
    (87) expression -> . expression TIMES expression
    (88) expression -> . expression DIVIDE expression
    (89) expression -> . expression EQ expression
    (90) expression -> . expression NEQ expression
    (91) expression -> . expression LT expression
    (92) expression -> . expression GT expression
    (93) expression -> . expression LE expression
    (94) expression -> . expression GE expression
    (95) expression -> . expression AND expression
    (96) expression -> . expression OR expression
    (97) expression -> . NOT expression
    (98) expression -> . MINUS expression
    (99) expression -> . AMP ID
    (100) expression -> . TIMES expression
    (101) expression -> . LPAREN expression RPAREN
    (102) expression -> . NUMBER
    (103) expression -> . STRING
    (104) expression -> . TRUE
    (105) expression -> . FALSE
    (106) expression -> . ID
    (107) expression -> . SELF
    (108) expression -> . NUMBER unit
    (109) expression -> . NUMBER unit unit
    (110) expression -> . ID LBRACKET expression RBRACKET
    (111) expression -> . expression DOT ID
    (112) expression -> . expression ARROW ID
    (113) expression -> . call
    (114) expression -> . NEW ID LPAREN arg_list_opt RPAREN
    (115) expression -> . ID LBRACE struct_field_inits RBRACE
    (72) call -> . ID LPAREN arg_list_opt RPAREN

    NOT             shift and go to state 54
    MINUS           shift and go to state 52
    AMP             shift and go to state 55
    TIMES           shift and go to state 53
    LPAREN          shift and go to state 57
    NUMBER          shift and go to state 58
    STRING          shift and go to state 59
    TRUE            shift and go to state 60
    FALSE           shift and go to state 61
    ID              shift and go to state 56
    SELF            shift and go to state 62
    NEW             shift and go to state 64

    expression                     shift and go to state 66
    call                           shift and go to state 63

state 21

    (59) statement -> DEF . ID LPAREN param_list_opt RPAREN LBRACE statements RBRACE
    (60) statement -> DEF . ID LPAREN param_list_opt RPAREN LBRACE statements return_stmt RBRACE

    ID              shift and go to state 67


state 22

    (71) statement -> call . SEMI

    SEMI            shift and go to state 68


state 23

    (77) statement -> PRINT . LPAREN print_args_opt RPAREN SEMI

    LPAREN          shift and go to state 69


state 24

    (82) statement -> INPUT . LPAREN ID RPAREN SEMI

    LPAREN          shift and go to state 70


state 25

    (83) statement -> DATASET . ID ASSIGN LOAD LPAREN STRING RPAREN SEMI

    ID              shift and go to state 71


state 26

    (84) statement -> FILTER . ID WHERE expression SEMI

    ID              shift and go to state 72


state 27

    (5) type -> INT .

    TIMES           reduce using rule 5 (type -> INT .)
    AMP             reduce using rule 5 (type -> INT .)
    ID              reduce using rule 5 (type -> INT .)
    LBRACKET        reduce using rule 5 (type -> INT .)
    SEMI            reduce using rule 5 (type -> INT .)


state 28

    (6) type -> FLOAT .

    TIMES           reduce using rule 6 (type -> FLOAT .)
    AMP             reduce using rule 6 (type -> FLOAT .)
    ID              reduce using rule 6 (type -> FLOAT .)
    LBRACKET        reduce using rule 6 (type -> FLOAT .)
    SEMI            reduce using rule 6 (type -> FLOAT .)


state 29

    (7) type -> BOOL_TYPE .

    TIMES           reduce using rule 7 (type -> BOOL_TYPE .)
    AMP             reduce using rule 7 (type -> BOOL_TYPE .)
    ID              reduce using rule 7 (type -> BOOL_TYPE .)
    LBRACKET        reduce using rule 7 (type -> BOOL_TYPE .)
    SEMI            reduce using rule 7 (type -> BOOL_TYPE .)


state 30

    (8) type -> STRING_TYPE .

    TIMES           reduce using rule 8 (type -> STRING_TYPE .)
    AMP             reduce using rule 8 (type -> STRING_TYPE .)
    ID              reduce using rule 8 (type -> STRING_TYPE .)
    LBRACKET        reduce using rule 8 (type -> STRING_TYPE .)
    SEMI            reduce using rule 8 (type -> STRING_TYPE .)


state 31

    (9) type -> VOID .

    TIMES           reduce using rule 9 (type -> VOID .)
    AMP             reduce using rule 9 (type -> VOID .)
    ID              reduce using rule 9 (type -> VOID .)
    LBRACKET        reduce using rule 9 (type -> VOID .)
    SEMI            reduce using rule 9 (type -> VOID .)


state 32

    (13) statement -> TYPE ID . ASSIGN type SEMI

    ASSIGN          shift and go to state 73


state 33

    (34) statement -> ID ASSIGN . expression SEMI
    (85) expression -> . expression PLUS expression
    (86) expression -> . expression MINUS expression
    (87) expression -> . expression TIMES expression
    (88) expression -> . expression DIVIDE expression
    (89) expression -> . expression EQ expression
    (90) expression -> . expression NEQ expression
    (91) expression -> . expression LT expression
    (92) expression -> . expression GT expression
    (93) expression -> . expression LE expression
    (94) expression -> . expression GE expression
    (95) expression -> . expression AND expression
    (96) expression -> . expression OR expression
    (97) expression -> . NOT expression
    (98) expression -> . MINUS expression
    (99) expression -> . AMP ID
    (100) expression -> . TIMES expression
    (101) expression -> . LPAREN expression RPAREN
    (102) expression -> . NUMBER
    (103) expression -> . STRING
    (104) expression -> . TRUE
    (105) expression -> . FALSE
    (106) expression -> . ID
    (107) expression -> . SELF
    (108) expression -> . NUMBER unit
    (109) expression -> . NUMBER unit unit
    (110) expression -> . ID LBRACKET expression RBRACKET
    (111) expression -> . expression DOT ID
    (112) expression -> . expression ARROW ID
    (113) expression -> . call
    (114) expression -> . NEW ID LPAREN arg_list_opt RPAREN
    (115) expression -> . ID LBRACE struct_field_inits RBRACE
    (72) call -> . ID LPAREN arg_list_opt RPAREN

    NOT             shift and go to state 54
    MINUS           shift and go to state 52
    AMP             shift and go to state 55
    TIMES           shift and go to state 53
    LPAREN          shift and go to state 57
    NUMBER          shift and go to state 58
    STRING          shift and go to state 59
    TRUE            shift and go to state 60
    FALSE           shift and go to state 61
    ID              shift and go to state 56
    SELF            shift and go to state 62
    NEW             shift and go to state 64

    expression                     shift and go to state 74
    call                           shift and go to state 63

state 34

    (72) call -> ID LPAREN . arg_list_opt RPAREN
    (73) arg_list_opt -> . arg_list
    (74) arg_list_opt -> .
    (75) arg_list -> . expression COMMA arg_list
    (76) arg_list -> . expression
    (85) expression -> . expression PLUS expression
    (86) expression -> . expression MINUS expression
    (87) expression -> . expression TIMES expression
    (88) expression -> . expression DIVIDE expression
    (89) expression -> . expression EQ expression
    (90) expression -> . expression NEQ expression
    (91) expression -> . expression LT expression
    (92) expression -> . expression GT expression
    (93) expression -> . expression LE expression
    (94) expression -> . expression GE expression
    (95) expression -> . expression AND expression
    (96) expression -> . expression OR expression
    (97) expression -> . NOT expression
    (98) expression -> . MINUS expression
    (99) expression -> . AMP ID
    (100) expression -> . TIMES expression
    (101) expression -> . LPAREN expression RPAREN
    (102) expression -> . NUMBER
    (103) expression -> . STRING
    (104) expression -> . TRUE
    (105) expression -> . FALSE
    (106) expression -> . ID
    (107) expression -> . SELF
    (108) expression -> . NUMBER unit
    (109) expression -> . NUMBER unit unit
    (110) expression -> . ID LBRACKET expression RBRACKET
    (111) expression -> . expression DOT ID
    (112) expression -> . expression ARROW ID
    (113) expression -> . call
    (114) expression -> . NEW ID LPAREN arg_list_opt RPAREN
    (115) expression -> . ID LBRACE struct_field_inits RBRACE
    (72) call -> . ID LPAREN arg_list_opt RPAREN

    RPAREN          reduce using rule 74 (arg_list_opt -> .)
    NOT             shift and go to state 54
    MINUS           shift and go to state 52
    AMP             shift and go to state 55
    TIMES           shift and go to state 53
    LPAREN          shift and go to state 57
    NUMBER          shift and go to state 58
    STRING          shift and go to state 59
    TRUE            shift and go to state 60
    FALSE           shift and go to state 61
    ID              shift and go to state 56
    SELF            shift and go to state 62
    NEW             shift and go to state 64

    arg_list_opt                   shift and go to state 75
    arg_list                       shift and go to state 76
    expression                     shift and go to state 77
    call                           shift and go to state 63

state 35

    (27) statement -> type TIMES . ID SEMI
    (28) statement -> type TIMES . ID ASSIGN expression SEMI
    (11) type -> type TIMES .

    TIMES           reduce using rule 11 (type -> type TIMES .)
    AMP             reduce using rule 11 (type -> type TIMES .)
    ID              reduce using rule 11 (type -> type TIMES .)
    LBRACKET        reduce using rule 11 (type -> type TIMES .)

  ! ID              [ shift and go to state 78 ]


state 36

    (31) statement -> type ID . SEMI
    (32) statement -> type ID . ASSIGN expression SEMI
